# xcp-ng-xapi-plugins

./: .coveragerc  .gitignore  README.md  build_plugin.sh  pyproject.toml  setup.cfg  test_plugin.sh
.github/: CODEOWNERS
.github/workflows/: format.yaml  main.yml
SOURCES/etc/xapi.d/plugins/: 2crsi-sensors.py  hyperthreading.py  ipmitool.py  kalray_dpu.py  lsblk.py  lvm.py  netdata.py  parse-lsblk.py  raid.py  sdncontroller.py  service.py  smart.py  smartctl.py  smartctlFull.py  smartctlHealth.py  updater.py  vdi-tools  vm_disk_space.py  xcpngutils.py  xosan2.py  zfs.py
SOURCES/etc/xapi.d/plugins/xcpngutils/: __init__.py  filelocker.py  operationlocker.py  pid.py  xenstore.py
SOURCES/etc/xapi.d/plugins/xcpngutils/pid/: __init__.py
tests/: conftest.py  mocked_configparser.py  mocked_filelocker.py  mocked_kalray_rpc.py  mocked_xen_api_plugin.py  mocked_xs.py  mocked_yum.py  pytest.ini  test_hyperthreading.py  test_ipmitool.py  test_kalray_dpu.py  test_lsblk.py  test_lvm.py  test_netdata.py  test_raid.py  test_sdn-controller.py  test_service.py  test_smartctl.py  test_updater.py  test_vm_disk_space.py  test_zfs.py
tests/mocked_xcp/: environ.py
tests/sdncontroller_test_cases/: functions.py  parser.py
tests/smartctl_outputs/: smartctl_expected_output.py  smartctl_megaraid0.py  smartctl_megaraid1.py  smartctl_nvme1.py  smartctl_sda.py
xcp-ng-updater/etc/xapi.d/plugins/: updater.py
